RESOLVED FIXED 55211
PumpSession should not call currentTime() in the constructor
https://bugs.webkit.org/show_bug.cgi?id=55211
Summary PumpSession should not call currentTime() in the constructor
Eric Seidel (no email)
Reported Friday, February 25, 2011 11:53:19 AM UTC
PumpSession should not call currentTime() in the constructor
Attachments
Patch (3.26 KB, patch)
2011-02-25 04:04 PST, Eric Seidel (no email)
no flags
Patch (3.44 KB, patch)
2011-02-25 04:12 PST, Eric Seidel (no email)
no flags
Patch for landing (3.53 KB, patch)
2011-04-14 07:59 PDT, Eric Seidel (no email)
no flags
Patch for landing (3.54 KB, patch)
2011-04-14 08:06 PDT, Eric Seidel (no email)
no flags
Eric Seidel (no email)
Comment 1 Friday, February 25, 2011 12:04:31 PM UTC
WebKit Review Bot
Comment 2 Friday, February 25, 2011 12:08:08 PM UTC
Eric Seidel (no email)
Comment 3 Friday, February 25, 2011 12:12:26 PM UTC
Simon Fraser (smfr)
Comment 4 Friday, February 25, 2011 4:30:43 PM UTC
Comment on attachment 83792 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=83792&action=review > Source/WebCore/html/parser/HTMLParserScheduler.h:68 > + // currentTime() can be expensive. By delaying, we avoided calling One space after periods please.
Tony Gentilcore
Comment 5 Friday, February 25, 2011 4:33:18 PM UTC
LGTM
Eric Seidel (no email)
Comment 6 Tuesday, March 29, 2011 7:57:27 PM UTC
I can't believe this got forgotten for a month due to a space after a period. :(
Eric Seidel (no email)
Comment 7 Tuesday, March 29, 2011 7:58:16 PM UTC
(That's not a knock against the style guide. Just annoyed that I forgot the patch.) Peacekeeper will be even faster once this lands. :)
WebKit Commit Bot
Comment 8 Tuesday, March 29, 2011 8:02:01 PM UTC
Comment on attachment 83792 [details] Patch Rejecting attachment 83792 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-3', 'apply-..." exit_code: 2 Last 500 characters of output: ith fuzz 3. patching file Source/WebCore/html/parser/HTMLDocumentParser.cpp Hunk #1 succeeded at 40 (offset 1 line). patching file Source/WebCore/html/parser/HTMLParserScheduler.h Hunk #1 FAILED at 26. Hunk #2 FAILED at 38. Hunk #3 succeeded at 68 (offset 3 lines). 2 out of 3 hunks FAILED -- saving rejects to file Source/WebCore/html/parser/HTMLParserScheduler.h.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Simon Fraser', u'--for..." exit_code: 1 Full output: http://queues.webkit.org/results/8285412
Eric Seidel (no email)
Comment 9 Thursday, April 14, 2011 3:59:38 PM UTC
Created attachment 89581 [details] Patch for landing
Eric Seidel (no email)
Comment 10 Thursday, April 14, 2011 4:06:41 PM UTC
Created attachment 89584 [details] Patch for landing
WebKit Commit Bot
Comment 11 Friday, April 15, 2011 4:45:45 AM UTC
The commit-queue encountered the following flaky tests while processing attachment 89584 [details]: media/video-playbackrate.html bug 58629 (author: eric.carlson@apple.com) media/video-played-collapse.html bug 58630 (authors: hclam@google.com and jamesr@chromium.org) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 12 Friday, April 15, 2011 4:49:06 AM UTC
Comment on attachment 89584 [details] Patch for landing Clearing flags on attachment: 89584 Committed r83940: <http://trac.webkit.org/changeset/83940>
WebKit Commit Bot
Comment 13 Friday, April 15, 2011 4:49:12 AM UTC
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.